front/src/styles/global.css
@import "components/fonts.css";
@import "components/tw-components.css";
@import "components/utilities.css";
@import "pages/posts.css";
@import "components/Code/Code.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@media (prefers-reduced-motion: reduce) {
  html, body {
    scroll-behavior: auto;
  }
}

html.light-theme {
  @apply dg--light-theme;
  @apply github-light;
}

html.dark-theme {
  @apply dg--dark-theme;
  @apply github-dark;
}

@media (prefers-color-scheme: light) {
  :root {
    @apply dg--light-theme;
    @apply github-light;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    @apply dg--dark-theme;
    @apply github-dark;
  }
}

html {
  @apply transition-colors 
    dg--transition-effect;
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  height: fit-content;
  overflow: clip;
  scroll-behavior: smooth;
}

body {
  @apply flex
    flex-col
    items-center
    dg--font-ps
    transition-colors
    dg--transition-effect
    text-base
    md:text-lg;
  color: rgb(var(--foreground-rgb));
  height: 100vh;
  min-height: 100vh;
  overflow: overlay;
  scroll-behavior: smooth;
  scrollbar-gutter: stable both-edges;
  .main section .flourish,
  .header,
  .main,
  .footer {
    @apply transition-all
      dg--transition-effect
      opacity-0;
  }
  &.ready {
    div > .flourish {
      transition: transform 1s;
      transition-delay: 2s;
      transform: translateY(-100%);
      box-shadow: none !important;
      @apply shadow-none;
    }
    .main section .flourish,
    .header,
    .main,
    .footer {
      @apply opacity-100;
    }
    .main section, .footer {
      @apply opacity-95 
        transition-opacity
        dg--transition-effect;
    }
    &.animating {
      div > .flourish {
        transition: transform 0s;
        transition-delay: 0s;
        transform: translateY(0);
        box-shadow: none !important;
        @apply shadow-none;
      }
      .main section, .footer {
        @apply opacity-0
        transition-opacity
        dg--transition-effect;
      }
    }
  }
}

.flourish {
  @apply shadow-sm
    h-2;
  background-color: rgb(var(--foreground-rgb));
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.transition-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header,
.footer {
  @apply w-full
    max-w-7xl
    px-3
    sm:p-6
    lg:p-14;
}

.header {
  @apply flex
    items-center
    pt-5
    sm:pt-9
    md:pt-11
    pb-0;
  position: relative;
}

.skip-to-content {
  @apply dg--btn-secondary
    px-5
    py-3
    transition-all
    dg--transition-effect;
  position: absolute;
  transform: translateY(-100%);
  @apply opacity-0;

  &:focus {
    transform: translateY(0%);
    @apply opacity-100;
  }
}

.site-title {
  @apply flex
    flex-grow;
}

.nav-home {
  @apply dg--font-psbl
    dg--link-hover
    leading-none
    text-xl
    tracking-tight
    sm:ml-[2px]
    sm:text-2xl;
  h1 {
    transition: font-size;
    @apply dg--transition-effect
      tracking-tight;
  }
}

.theme-toggle {
  @apply dg--link-hover
  ml-3
  p-3
  pr-0
  transition
  dg--transition-effect;
  #moon {
    padding-bottom: 1px;
  }
}

.nav-bar {
  @apply flex-shrink;
  .btn {
    @apply dg--btn-secondary
      font-semibold
      py-2
      px-4
      rounded
      shadow
      align-text-bottom;
  }
  ul {
    @apply justify-end;
  }
}

.nav-item {
  @apply inline
    mx-3
    last:mr-0;
}

.main {
  @apply flex
    flex-col
    items-center
    justify-center
    px-2
    xs:px-5
    sm:px-8
    sm:pb-3
    pt-11
    w-full
    max-w-6xl;
}

.bio,
.links {
  @apply dg--transition-effect
    transition-[max-width]
    max-w-sm
    sm:max-w-xl;
}

.bio {
  @apply pt-7;
  img {
    @apply m-auto
      rounded-full
      shadow-lg
      h-[120px]
      w-[120px];
    border: 1px solid rgba(var(--foreground-rgb), 0.5);
    position: relative;
    z-index: 3;
  }
  h1.headline {
    transition: font-size;
    @apply dg--transition-effect
      dg--font-psb
      brightness-125
      font-bold
      mt-7
      text-3xl
      sm:text-4xl
      tracking-tight;
  }
}

.bio,
.post,
.posts,
.privacy,
.footer {
  a {
    @apply dg--link-hover;
  }
}

.bio,
.post,
.posts,
.privacy,
.footer,
.not-found {
  a {
    @apply pb-0.5 
      opacity-90;
    color: rgb(var(--foreground-rgb));
    border-bottom: 1px solid rgb(var(--foreground-rgb));
    &:hover,
    &:focus {
      @apply opacity-100;
      border-color: rgb(var(--highlight-rgb));
    }
  }
}

.bio p {
  @apply mt-7;
}

.links {
  @apply items-stretch
    px-8
    mt-7;
  .link-list {
    @apply flex
      flex-wrap
      justify-center
      items-center;
  }
  .link {
    @apply flex
      leading-none
      m-2;
    a {
      @apply self-center
        transition-colors
        dg--transition-effect
        inline-block
        h-full 
        p-1;
      color: rgb(var(--foreground-rgb-faded));
      &:hover,
      &:focus {
        color: rgb(var(--highlight-rgb));
      }
    }
    svg {
      @apply w-7
        h-7;
    }
    .twitter-icon {
      @apply pt-[5px];
      svg {
        @apply h-8
          w-8;
      }
    }
    .instagram-icon {
      @apply pt-[6px];
    }
    .link-icon {
      @apply pt-[7px];
    }
    .pinboard-icon {
      @apply pl-[3px];
    }
  }
}

.image-loader {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: auto;
}

.scroll-top {
  display: flex;
  @apply text-sm
    dg--link-hover
    dg--transition-effect
    brightness-75
    dark:brightness-50
    transition
    md:hidden;
  align-items: center;
  flex-direction: column;
  &:hover,
  &:focus {
    @apply brightness-100
      dark:brightness-100;
  }
  svg {
    @apply mt-5
      mb-2;
  }
}

.footer {
  @apply pb-3
    pt-6
    md:pb-9
    flex
    flex-col
    flex-grow
    justify-end
    text-center
    mt-auto
    text-sm;
  small {
    color: rgb(var(--subdued-rgb));
    a {
      @apply brightness-75
        dark:brightness-50
        transition
        dg--transition-effect;
      border-color: rgb(var(--foreground-rgb));
      color: rgb(var(--foreground-rgb));
      &:hover,
      &:focus {
        @apply brightness-100
          dark:brightness-100;
      }
    }
  }
}

